--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <input class="expenses-item" type="text" id="expenses_2" placeholder="Цена">
         <input class="expenses-item" type="text" id="expenses_3" placeholder="Наименование">
         <input class="expenses-item" type="text" id="expenses_4" placeholder="Цена">
-        <button class="expenses-item-btn">Утвердить</button>
+        <button class="expenses-item-btn" disabled>Утвердить</button>
 
         <div class="optionalexpenses">Введите необязательные расходы</div>
         <input class="optionalexpenses-item" type="text" id="optionalexpenses_1">
         <input class="optionalexpenses-item" type="text" id="optionalexpenses_2">
         <input class="optionalexpenses-item" type="text" id="optionalexpenses_3">
-        <button class="optionalexpenses-btn">Утвердить</button>
+        <button class="optionalexpenses-btn" disabled>Утвердить</button>
 
         <div class="count-budget">Расчет дневного бюджета</div>
-        <button class="count-budget-btn">Рассчитать</button>
+        <button class="count-budget-btn" disabled>Рассчитать</button>
 
         <div class="choose-income-label">Введите статьи возможного дохода через запятую</div>
         <input class="choose-income" type="text" id="income">
@@ -43,9 +43,9 @@
           <input id="savings" type="checkbox" />
         </div>
         <label for="sum">Сумма</label>
-        <input class="choose-sum" id="sum" type="text">
+        <input class="choose-sum" id="sum" type="text" disabled>
         <label for="percent">Процент</label>
-        <input class="choose-percent" id="percent" type="text">
+        <input class="choose-percent" id="percent" type="text" disabled>
 
         <div class="open">
           <button class="start" id="start">Начать расчет</button>
